// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionBar /> create basic Action Bar 1`] = `
<div
  className="fd-action-bar blue"
>
  <div
    className="fd-action-bar__back blue"
  >
    <button
      className="fd-button--light fd-button--compact sap-icon--nav-back"
    />
  </div>
  <div
    className="fd-action-bar__header blue"
  >
    <h1
      className="fd-action-bar__title"
    >
      Page Title
    </h1>
    <p
      className="fd-action-bar__description"
    >
      Action Bar Description
       
    </p>
  </div>
  <div
    className="fd-action-bar__actions blue"
  >
    <button>
      Button
    </button>
  </div>
</div>
`;

exports[`<ActionBar /> create basic Action Bar 2`] = `
<div
  className="fd-action-bar"
>
  <div
    className="fd-action-bar__back blue"
  >
    <button
      className="fd-button--light fd-button--compact sap-icon--nav-back"
    />
  </div>
  <div
    className="fd-action-bar__header blue"
  >
    <h1
      className="fd-action-bar__title"
    >
      Page Title
    </h1>
    <p
      className="fd-action-bar__description"
    >
      Action Bar Description
       
    </p>
  </div>
  <div
    className="fd-action-bar__actions blue"
  >
    <button>
      Button
    </button>
  </div>
</div>
`;

exports[`<ActionBar /> create basic mobile Action Bar 1`] = `
<div
  style={
    Object {
      "width": "319px",
    }
  }
>
  <div
    className="fd-action-bar blue"
  >
    <div
      className="fd-action-bar__back"
    >
      <button
        className="fd-button--light fd-button--compact sap-icon--nav-back"
      />
    </div>
    <div
      className="fd-action-bar__header"
    >
      <h1
        className="fd-action-bar__title"
      >
        Page Title
      </h1>
      <p
        className="fd-action-bar__description"
      >
        Action Bar Description
         
      </p>
    </div>
    <div
      className="fd-action-bar__actions"
    >
      <button>
        Button
      </button>
    </div>
  </div>
</div>
`;

exports[`<ActionBar /> create basic mobile Action Bar 2`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="fd-action-bar"
  >
    <div
      className="fd-action-bar__back"
    >
      <button
        className="fd-button--light fd-button--compact sap-icon--nav-back"
      />
    </div>
    <div
      className="fd-action-bar__header"
    >
      <h1
        className="fd-action-bar__title"
      >
        Page Title
      </h1>
      <p
        className="fd-action-bar__description"
      >
        Action Bar Description
         
      </p>
    </div>
    <div
      className="fd-action-bar__actions"
    >
      <button>
        Button
      </button>
    </div>
  </div>
</div>
`;
